# PythonTemplate

./: .dockerignore  .flake8  docker-compose_develop.yml  pyproject.toml  pyrightconfig.json  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
src/util/: calc.py
tests/: conftest.py
tests/util/: test_backoff.py  test_calc.py  test_version.py
