[tool.poetry]
name = "python_dev"
version = "0.1.0"
description = ""
authors = ["KenichiShintome"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
backoff = "^2.1.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
