[tool.poetry]
name = "python_dev"
version = "0.1.0"
description = ""
authors = ["KenichiShintome"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
requests = "^2.28.1"
SQLAlchemy = "^1.4.40"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
retrying = "^1.3.3"
backoff = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19.0"
pytest-env = "^0.6.2"
testfixtures = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
